[workspace]
members = [
    # For executable crates
    "bin/*",
    # For library crates
    "lib/*"
]
resolver = "2"

[workspace.dependencies]
# local crates - bin
cli = {path = "./bin/cli", version = "0.0.0"}
ui = {path = "./bin/ui", version = "0.0.0"}
migrations = {path = "./bin/migrations", version = "0.0.0"}
iced-ui = {path = "./bin/ui", version = "0.0.0"}
# local crates - libs
api = {path = "./lib/api", version = "0.0.0"}
db = {path = "./lib/db", version = "0.0.0"}
db_lib = {path = "./lib/db_lib", version = "0.0.0"}
goals_lib = {path = "./lib/goals_lib", version = "0.0.0"}

# non-local crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.10"
eframe = "0.34"
clap = { version = "4.5.44", features = ["derive"] }
rusqlite = "0.39.0"
directories = "6.0.0"
chrono = "0.4.41"
iced = "0.14"
color-eyre = "0.6"
