[package]
name = "db_lib"
version = "0.0.0"
edition = "2021"
description = "The UI for steam random"


[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
rand.workspace = true
eframe.workspace = true
clap.workspace = true
rusqlite.workspace = true
directories.workspace = true
chrono.workspace = true
